objects/APTS_Stage_Cost_LineItems__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Base_Cost__c</fullName>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cart__c</fullName>
        <label>Cart</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Type__c</fullName>
        <label>Cost Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Record Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Line_Item__c</fullName>
        <label>Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Stage Cost Line Items</relationshipLabel>
        <relationshipName>Stage_Cost_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stage Cost Line Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCLI-{0000000}</displayFormat>
        <label>Stage Cost Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Cost Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>